# shyft

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  Installer  README  README.md  Shyft.py  ShyftSetup.iss  check_versions.py  pyproject.toml  requirements.txt  run_shyft.py  setup.py
ShyftApp/: README.md
ShyftApp/Shyft.app/Contents/: Info.plist
ShyftApp/Shyft.app/Contents/MacOS/: Shyft
ShyftApp/Shyft.app/Contents/Resources/: Shyft.py  __boot__.py  data.json
ShyftApp/Shyft.app/Contents/_CodeSignature/: CodeResources
ShyftEXE/_internal/: config.ini
shyft_app/Shyft.app/Contents/: Info.plist
shyft_app/Shyft.app/Contents/MacOS/: Shyft
shyft_app/Shyft.app/Contents/_CodeSignature/: CodeResources
src/: untitled.ipynb
src/shyft/: Shyft.py  __init__.py  __main__.py  setup.py  shyft.c
src/shyft/gui/: main_window.py  timer_window.py
src/shyft/gui/dialogs/: autologger_dialog.py  edit_shift_dialog.py  manual_entry_dialog.py  view_logs_window.py
src/shyft/models/: shift_model.py
src/shyft/resources/: entitlements.plist  icon.icns
src/shyft/resources/icon.iconset/: Contents.json
