[tool.poetry]
name = "shyft"
version = "0.1.0"
description = "A time tracking and shift management application"
authors = ["K. LeBryce <k.lebryce@pm.me>"]
readme = "README.md"
packages = [{include = "shyft", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.5.0"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shyft = "shyft.__main__:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
